--- a/cmh90213c000002js40osczit.md
+++ b/cmh90213c000002js40osczit.md
@@ -2,7 +2,7 @@
 title: "n8n – Next Generation Workflow Automation with Open Source"
 datePublished: Mon Oct 27 2025 10:33:20 GMT+0000 (Coordinated Universal Time)
 cuid: cmh90213c000002js40osczit
-slug: n8n-next-generation-workflow-automation-with-open-source
+slug: article-2025-08-09-13
 cover: https://cdn.hashnode.com/res/hashnode/image/stock/unsplash/gLxNxONfRz0/upload/9e62ca812ba57271989e48780d9c1621.jpeg
 tags: software-development, n8n
 
