update post: n8n – Next Generation Workflow Automation with Open Source

--- a/cmh90213c000002js40osczit.md
+++ b/cmh90213c000002js40osczit.md
@@ -14,7 +14,7 @@ In today’s hyper connected world, automating repetitive tasks is no longer j
 
 ## SlideShare
 
-[![https://www.slideshare.net/slideshow/n8n-next-generation-workflow-automation-with-open-source-2051/283940427](https://cdn.slidesharecdn.com/ss_thumbnails/n8n-next-generationworkflowautomationwithopensource-251025145312-811ea654-251027082751-279ec65a-thumbnail.jpg?width=640&height=640&fit=bounds align="center")](https://www.slideshare.net/slideshow/n8n-next-generation-workflow-automation-with-open-source-2051/283940427)
+[![](https://cdn.hashnode.com/res/hashnode/image/upload/v1761568657120/14bf8eb5-fbef-4cd5-a9be-7e1add6baaad.jpeg align="center")](https://www.slideshare.net/slideshow/n8n-next-generation-workflow-automation-with-open-source-2051/283940427)
 
 ## What is n8n?
 
