update post: n8n – Next Generation Workflow Automation with Open Source

--- a/cmh90213c000002js40osczit.md
+++ b/cmh90213c000002js40osczit.md
@@ -18,7 +18,7 @@ In today’s hyper connected world, automating repetitive tasks is no longer j
 
 ## What is n8n?
 
-n8n is a source-available automation platform that empowers technical teams to connect disparate applications and services, automate complex processes, and manipulate data flows with precision ([n8n overview 2025](https://www.baytechconsulting.com/blog/n8n-overview-2025#:~:text=n8n%20%28pronounced%20%22n,than%20individual%20tasks%20or%20operations) ). Unlike closed-source tools, n8n can be self-hosted on your own infrastructure, giving full control over data and allowing custom modifications. The project is built under a fair-code license, meaning the source is publicly available on GitHub and the core functionality is free to use ([n8n: Open-Source Workflow Automation Powerhouse | Infra-lovers](https://www.infralovers.com/blog/2025-05-09-n8n-workflow-automation/#:~:text=What%20is%20n8n%3F)). A visual workflow builder lets you construct automation pipelines without writing code, while code nodes provide low”code flexibility when needed.
+n8n is a source-available automation platform that empowers technical teams to connect disparate applications and services, automate complex processes, and manipulate data flows with precision ([n8n overview 2025](https://www.baytechconsulting.com/blog/n8n-overview-2025#:~:text=n8n%20%28pronounced%20%22n,than%20individual%20tasks%20or%20operations) ). Unlike closed-source tools, n8n can be self-hosted on your own infrastructure, giving full control over data and allowing custom modifications. The project is built under a fair-code license, meaning the source is publicly available on GitHub and the core functionality is free to use ([n8n: Open-Source Workflow Automation Powerhouse | Infra-lovers](https://www.infralovers.com/blog/2025-05-09-n8n-workflow-automation/#:~:text=What%20is%20n8n%3F)). A visual workflow builder lets you construct automation pipelines without writing code, while code nodes provide low-code flexibility when needed.
 
 ## Core Features
 
@@ -37,7 +37,7 @@ n8n is a source-available automation platform that empowers technical teams to c
     
 * An HTTP Request node to interact with any API.
     
-* Community”contributed custom nodes for niche integrations.
+* Community-contributed custom nodes for niche integrations.
     
 
 ### No-Code and Low-Code Flexibility
