--- a/cmh90213c000002js40osczit.md
+++ b/cmh90213c000002js40osczit.md
@@ -5,7 +5,7 @@ cuid: cmh90213c000002js40osczit
 slug: article-2025-08-09-2107
 cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1761573130118/0f917710-ae67-4417-879d-c94bba324ed3.png
 ogImage: https://cdn.hashnode.com/res/hashnode/image/upload/v1761576816942/e0a347c7-994a-4094-bfa5-d33d3394ae03.png
-tags: software-development, n8n
+tags: software-development, workflow, automation, n8n, workflow-automation
 
 ---
 
