update post: Building a Fully Customizable Headless Blog with Hashnode's Blog Starter Kit

--- a/cmhikwe15000602l4c9fz41p7.md
+++ b/cmhikwe15000602l4c9fz41p7.md
@@ -3,6 +3,8 @@ title: "Building a Fully Customizable Headless Blog with Hashnode's Blog Starter
 datePublished: Mon Nov 03 2025 03:26:44 GMT+0000 (Coordinated Universal Time)
 cuid: cmhikwe15000602l4c9fz41p7
 slug: article-2025-11-03-1222
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1762140688653/13d797ec-f1a6-4b3a-ae8e-e8045bc67d96.png
+ogImage: https://cdn.hashnode.com/res/hashnode/image/upload/v1762140704294/c862afb5-3a7e-404c-a59b-830de356c103.png
 tags: design, graphql, hashnode, nextjs, headless-cms, vercel, tailwind-css, starter-kit
 
 ---
